# clavfrancais

./: README.md  package-lock.json  package.json  vite.config.ts
python-version/: .gitignore  README.md
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  controllers.rs  language.rs  lib.rs  main.rs  plugins.rs  settings.rs  setup.rs  toggle_shortcut.rs  tray_menu.rs  utils.rs  window_event.rs
src/components/FlagButton/: FlagButton.tsx  flag-button.module.css
src/components/Footer/: Footer.tsx  footer.module.css
src/components/Header/: Header.tsx  header.module.css
src/components/LanguagePicker/: LanguagePicker.tsx  language-picker.module.css
src/components/LinkIcon/: LinkIcon.tsx
src/components/Logo/: Logo.tsx  logo.module.css
src/components/MainAppLayout/: MainAppLayout.tsx  main-app-layout.module.css
src/components/Panel/: Panel.tsx  panel.module.css
src/components/QuitIcon/: QuitIcon.tsx
src/components/RoundedButton/: RoundedButton.tsx  rounded-button.module.css
src/components/Selection/: Selection.tsx  selection.module.css
src/components/Settings/: Settings.tsx  settings.module.css
src/components/ToggleSwitch/: ToggleSwitch.tsx  toggle-switch.module.css
